manifests/redis/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: redis
  namespace: redis-development
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 6379
        name: tcp-redis
        protocol: TCP
      hosts:
        - "redis.xplaceinmyheart.ru"
